--- a/config/config_en_semcor_wnoffsets_full.yaml
+++ b/config/config_en_semcor_wnoffsets_full.yaml
@@ -8,7 +8,7 @@ data:
   sense_inventory: wnoffsets 
   label_from_training: False
   gold_id_separator: " "
-  outpath: data/models/en_semcor_wnoffsets_full/
+  outpath: data/models/en_semcor_wnoffsets_full_new/
   #mfs_file: resources/mfs/mfs_wn.en.wnoffset.txt
   test_names:
       #- senseval2
@@ -27,7 +27,7 @@ data:
   max_segments_in_batch: 2000
 
 model:
-  device: cuda 
+  device: cpu #cuda 
   model_name: bert-large-cased
   learning_rate: 1e-4
 
