--- a/syntagrank_config/config.json
+++ b/syntagrank_config/config.json
@@ -1,5 +1,6 @@
 {
-  "url": "http://api.syntagnet.org/",
+  "url": "http://151.100.179.43:8080/",
   "disambiguate_text_endpoint": "disambiguate",
-  "disambiguate_tokens_endpoint":  "disambiguate_tokens"
+  "disambiguate_tokens_endpoint":  "disambiguate_tokens",
+  "default_url":"http://api.syntagnet.org/"
 }
